2003-05-24  JMB  Better menu handling in desktop versions

    In at least some versions of Qt3, the menu was present but no text was
    shown.  Now using a more normal display method which seems to work more
    reliably.

2003-05-23  JMB  Alternate row shading, calculator widget

    Even and odd rows now use different background colors to make it easier
    to follow a row across the screen.  The default colors are white and
    light gray, but can be specified via buttons in the Preferences dialog.
    These colors are used in the data viewer, columns editor, view editor,
    and sorting editor.

    At the end of each entry field for a numeric value (type integer or
    decimal), there is a button which will launch a simple calculator,
    starting with the currently displayed value.  Clicking OK will place
    the current result into the entry field.  This makes it easier to enter
    data that needs to be calculated before entry, and is often faster than
    entering a number via the keyboard or an on-screen input method.

2003-04-10  JMB  Windows CSV import bugfix

    In version 1.6, importing a CSV file on the Windows version would produce
    an empty error dialog and fail to update the display even though the
    import was successful; this has been corrected.

2003-04-03  JMB  Enum update bugfix, file overwrite warning

    When the value of an enum was changed, its index wasn't updated in the
    data table, so it was sorted and filtered as if its value hadn't changed;
    this has been corrected.

    The desktop versions now launch a confirmation dialog if you choose an
    existing file when selecting the path to a new PortaBase file.  Useful
    if you accidentally click "New" instead of "Open" and don't realize it.

2003-04-02  JMB  XML export bugfix, desktop import bugfix

    Version 1.6 accidentally exported an element called "gcrypt" indicating
    whether the source file was encrypted or not; this is no longer exported,