@@ -12,11 +12,14 @@
 #ifndef IMPORT_DIALOG_H
 #define IMPORT_DIALOG_H
 
+#include <qstringlist.h>
+
 // possible data sources
 #define NO_DATA 0
 #define CSV_FILE 1
 #define MOBILEDB_FILE 2
 #define XML_FILE 3
+#define OPTION_LIST 4
 
 class Database;
 class QWidget;
@@ -28,11 +31,13 @@ public:
     ~ImportDialog();
 
     bool exec();
+    QStringList getOptions();
 
 private:
     Database *db;
     QWidget *parentWidget;
     int source;
+    QStringList options;
 };
 
 #endif
