@@ -13,12 +13,14 @@
 #define IMPORT_DIALOG_H
 
 #include <qdialog.h>
+#include <qstringlist.h>
 
 // possible data sources
 #define NO_DATA 0
 #define CSV_FILE 1
 #define MOBILEDB_FILE 2
 #define XML_FILE 3
+#define OPTION_LIST 4
 
 class Database;
 class DocLnk;
@@ -33,6 +35,7 @@ public:
                  const char *name = 0, WFlags f = 0);
     ~ImportDialog();
     int exec();
+    QStringList getOptions();
 
 private slots:
     void import(const DocLnk &);
@@ -46,6 +49,7 @@ private:
     FileSelector *selector;
     int source;
     bool importDone;
+    QStringList options;
 };
 
 #endif
